# codex-research-script

./: README.md  package.json  pyproject.toml  script.sh
src/codex_research_script/: __init__.py  __main__.py  runner.py
