[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-research-script"
version = "0.1.0"
description = "A small Python runner for the repository upload script."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
command-formatter = "codex_research_script.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_research_script = ["script.sh"]
